# MDAQA

./: .gitignore  pyproject.toml  readme.md  requirements.txt
dataProcess/: process.py
mdaqa/: __init__.py  data.py  modeling_roberta.py  util.py
scripts/: adapt.py  evaluate.py  preprocess.py  train.py
v2/: adaptation.py  base_train.py  eva.py  roberta.py  util.py
v2/sh/: longtime.sh  mGpuRun.sh  short.sh  t4run.sh  v100run.sh
